objects/FieloEE__Like__c.object
<CustomObject>
    <description>Members that pressed the Like button of a content feed or a reward.</description>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Likes</relationshipLabel>
        <relationshipName>Likes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__News__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content feed</label>
        <referenceTo>FieloEE__News__c</referenceTo>
        <relationshipLabel>Like</relationshipLabel>
        <relationshipName>Likes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__ParentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Like</relationshipLabel>
        <relationshipName>Likes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Like</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Like Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Like</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>